UPDATE block padding on code needs to be higher to ensure button doesnt overflow  single lines

--- a/app/styles/components/code.css
+++ b/app/styles/components/code.css
@@ -13,7 +13,7 @@
 
     .shiki-wrapper pre {
         max-height: 30rem;
-        padding: 0.5em;
+        padding: 1.5em 0.5em;
         padding-inline-end: 3em;
         margin-block: 0;
         border: var(--border-thick);
